Sayı Tahmin Oyunu is added.

--- a/Sayı Tahmin Oyunu.ipynb
+++ b/Sayı Tahmin Oyunu.ipynb
@@ -45,7 +45,7 @@
     "            print(\"You win the game...\")\n",
     "            break\n",
     "        elif guess > number:\n",
-    "            print(\"You said high...\")\n",
+    "            print(\"You said high....\")\n",
     "        else:\n",
     "            print(\"You said Low...\")\n",
     "       \n",
